Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-10942

[C++] S3FileSystem::Impl::IsEmptyDirectory fails on Amazon S3

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 2.0.0
    • 3.0.0
    • C++

    Description

      Running S3FileSystem::GetFileInfo() where the path is in the form "bucket-name/dir-name" and this is a bucket on AWS S3, it throws the following error:

      "When reading information for key 'dir-name' in bucket 'bucket-name': AWS Error [code 15]: No response body.

      I tracked down the issue to the IsEmptyDirectory method, and noticed that removing kSep from this line:
      req.SetKey(ToAwsString(key) + kSep);

      fixes the issue.

      However, I don't know why kSep is needed in the first place so I'm not sure what a good solution would be.
      Also, the key variable on entering IsEmptyDirectory is just the name of the directory (doesn't have separators).

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              jjgalvez Juan Galvez
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 10m
                  1h 10m