ARROW-10942: [C++] Fix S3FileSystem::Impl::IsEmptyDirectory on Amazon

Amazon and Minio S3 implementations unfortunately have slightly different conventions for recognizing and handling empty "directories".

Closes #8941 from pitrou/ARROW-10942-is-empty-dir-s3

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>